# ghostty-lsp

./: Cargo.toml  LICENSE  README.md  config
src/: lib.rs  main.rs
src/definitions/: mod.rs
src/handlers/: mod.rs
